# ClauseMind

./: .gitignore  CLAUDE_contract_review_react_fastapi.md  README.md  TODO.md
backend/: .env.example  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/agents/: __init__.py  base_agent.py  clause_extraction_agent.py  consistency_check_agent.py  contract_profile_agent.py  llm_client.py  orchestrator.py  report_generation_agent.py  risk_detection_agent.py  suggestion_agent.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  exceptions.py  response.py  security.py
backend/app/models/: __init__.py  contract.py  parse_job.py  review_results.py  review_task.py  user.py
backend/app/prompts/: clause_extraction_agent.txt  consistency_check_agent.txt  contract_profile_agent.txt  report_generation_agent.txt  risk_detection_agent.txt  suggestion_agent.txt
backend/app/schemas/: __init__.py  auth.py  contract.py  normalization.py  parse.py  review.py
backend/app/services/: contract_service.py  document_normalizer.py  file_storage_service.py  mineru_service.py  report_service.py  review_service.py
backend/migrations/: env.py
backend/migrations/versions/: 2c0d84234526_create_parse_job_and_document_parse_.py  (+4 more)
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_base_agent.py  test_config.py  test_contract_profile_agent.py  test_contracts.py  test_full_review.py  test_llm_client.py  test_mineru_service.py  test_normalization.py  test_parse.py  test_repository_config_docs.py  test_review.py
(+65 files in other folders)
