[project]
name = "clausemind-backend"
version = "0.1.0"
description = "FastAPI backend for ClauseMind contract review system"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "loguru>=0.7.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
